# captcha-gpu

./: .gitignore  Lambda Cloud API spec 1.9.3.json  README.md  env.example  pixi.toml
examples/: generate_plot.py
gpu-forecaster/: pixi.toml
gpu-forecaster/models/: gpu_1x_a10.np  gpu_1x_a100_sxm4.np  gpu_1x_gh200.np  gpu_8x_a100.np  gpu_8x_a100_80gb_sxm4.np
gpu-forecaster/src/: api_strategy.py  evaluate_24h.py  evaluate_all_gpus.py  evaluate_hierarchical.py  evaluate_improvements.py  experiment_blocks.py  improve_model.py  inference.py  main.py  predict_window.py  train_models.py
lambda-cloud-api/: Cargo.toml  availability_stats  availability_stats.csv  availability_stats_backup.csv
lambda-cloud-api/src/: lib.rs  main.rs
