[package]
name = "lambda-cloud-api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
dotenvy = "0.15"
dialoguer = "0.11"
chrono = "0.4"
rand = "0.8"
csv = "1.3"
